fixing small errors noticed on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -116,6 +116,8 @@ main {
   width: 22rem;
   height: fit-content;
   filter: drop-shadow(1rem 1rem 2rem #00000012);
+  z-index: 20;
+  overflow: hidden;
 
   .phone-screen {
     display: flex;
